// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickAssessToAssessmentDialog dialog is hidden when isShown is false 1`] = `
<DocumentFragment>
  <mock-dialog
    hidden="true"
    modalprops="[object Object]"
    title="Continue to Assessment"
  >
    <div>
      This will allow you to continue accessibility testing with additional tests and requirements in Assessment. All your existing data in Quick Assess will be transferred into Assessment.
    </div>
    <p>
      <strong>
        Note
      </strong>
      : If you have an Assessment in progress, the current Quick Assess evaluation data will replace the Assessment evaluation and previous progress will be lost.
    </p>
    <mock-styleddialogfooterbase>
      <div
        class="buttonsComponent"
      >
        <div
          class="buttonCol"
        >
          <mock-button
            classname="defaultButton"
          >
             Cancel 
          </mock-button>
        </div>
        <div
          class="buttonCol"
        >
          <mock-button
            classname="primaryButtonEnabled"
            data-automation-id="continue-to-assessment-button"
          >
             Continue to Assessment 
          </mock-button>
        </div>
      </div>
    </mock-styleddialogfooterbase>
  </mock-dialog>
</DocumentFragment>
`;

exports[`QuickAssessToAssessmentDialog dialog is not hidden when isShown is true 1`] = `
<DocumentFragment>
  <mock-dialog
    hidden="false"
    modalprops="[object Object]"
    title="Continue to Assessment"
  >
    <div>
      This will allow you to continue accessibility testing with additional tests and requirements in Assessment. All your existing data in Quick Assess will be transferred into Assessment.
    </div>
    <p>
      <strong>
        Note
      </strong>
      : If you have an Assessment in progress, the current Quick Assess evaluation data will replace the Assessment evaluation and previous progress will be lost.
    </p>
    <mock-styleddialogfooterbase>
      <div
        class="buttonsComponent"
      >
        <div
          class="buttonCol"
        >
          <mock-button
            classname="defaultButton"
          >
             Cancel 
          </mock-button>
        </div>
        <div
          class="buttonCol"
        >
          <mock-button
            classname="primaryButtonEnabled"
            data-automation-id="continue-to-assessment-button"
          >
             Continue to Assessment 
          </mock-button>
        </div>
      </div>
    </mock-styleddialogfooterbase>
  </mock-dialog>
</DocumentFragment>
`;
